fix broken cref

--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -235,7 +235,7 @@ And the same can be said of the feature representing the count of calls made fro
 This tree also performs poorly in its prediction of which users have migrated in the past.
 At some point, it is reasonable to assume that balancing classes leads to a better predictive outcome.
 Yet there are still various misclassifications in the predicted target classes.
-If we let the tree grow deeper though, we might increase the performance of the training error as shown in \cref{figure:biasVariance}.
+If we let the tree grow deeper though, we might increase the performance of the training error as shown in \cref{figure:dtree_overfit_problem_2}.
 But again, this won't help our generalization error.
 So to tackle most of the disadvantages described by this technique, \textit{Random Forests} are what follow as a natural extension to this classifier.
 
