keep enlarging results

--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -165,8 +165,13 @@ All of these methods were successively compared on the same \cref{target2}, to c
 
 As we will see later in \cref{tab:all_results}, \cref{target2} happened to be the hardest task of all, where all classifiers had their lowest scores.
 
-By comparing this problem over the various tree methods, we presented a thorough discussion of the applications that these kind of datasets can provide.
+By comparing this problem across the tree methods, we gave a thorough discussion of the applications that these kind of datasets can provide.
 % to these kinds of tasks was elaborated.
+
+As a first observation we 
+
+
+
 
 
 
@@ -400,8 +405,8 @@ Large at-scale and temporal user mobility were captured by the CDRs, allowing us
 
 
 % \section{In-depth discussion}
-
 % In this work we took advantage of the large user scale and temporal range of the CDRs allowed us to capture a variety of human movements throughout the country.
+
 
 Migration patterns can then be used to suggest actual epidemic spread of this disease into areas not deemed endemic.
 
