--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -7,7 +7,7 @@
 %  Description: Chapter: Evaluation and Results
 %===============================================================================
 
-\chapter{Summary of Results and Conclusion}\label{ch:results_conclusion}
+\chapter{Summary of Results}\label{ch:results_conclusion}
 
 \todo{Erase this section}
 \section{Plan / Random notes to add to results chapter}
@@ -41,31 +41,31 @@ The overall picture of this work shows that there is evidence to confirm the hyp
 % A summary of the work done we can say we have discussed issues on the most of the following items:
 
 In \cref{ch:descr-risk} we presented the CDR dataset and how it was relevant to the problem.
-We showed how the data contained dynamic georeferrenced data at the user level. 
+We showed how the data contained dynamic georeferrenced data at the user level.
 
 With a minuscule sample of the CDRs we showed that the dataset is rich in social interactions between users.
 This gave us an idea of how this type of data could be leveraged to the general problem.
 We then framed our problem in the context of long-term human migrations and gave an idea of the importance of them, in relation to the epidemic nature of the disease.
 
-We noted that the dataset posed a very unbalanced classification problem. 
-As expected, most telco users did not show any migration pattern to or from the endemic region, in the time of analysis. 
-This also implied that we had a very correlated problem, where most users did not change their past and present endemic conditions. 
-This information, combined with the local calling nature, meant that we had correlations with the target feature. 
+We noted that the dataset posed a very unbalanced classification problem.
+As expected, most telco users did not show any migration pattern to or from the endemic region, in the time of analysis.
+This also implied that we had a very correlated problem, where most users did not change their past and present endemic conditions.
+This information, combined with the local calling nature, meant that we had correlations with the target feature.
 As users living in the endemic region will most probably have lived there in the past as well.
 
 % in which there are few positive cases over all of the possible.
  % an exploratory We compared the relative sample of users
 
 In this stage we set to explore data transformations and  visualizations to explore further the information contained in the data.
-As a starting point we transformed the user-level data into a dataset at the antennas level. 
-This step aggregated information of call patterns to and from the endemic region. 
+As a starting point we transformed the user-level data into a dataset at the antennas level.
+This step aggregated information of call patterns to and from the endemic region.
 It allowed us to present geolocalized visualizations of these social interactions to the vulnerable areas.
-As an intermediate step in this process we had to introduce the definitions that we later used for the rest of this work. 
+As an intermediate step in this process we had to introduce the definitions that we later used for the rest of this work.
 We technically set what we meant was a vulnerable interaction and what we find is a user\'s home antenna.
 
 % For the latter we base
 
-The antenna level information was finally aggregated into heat maps. 
+The antenna level information was finally aggregated into heat maps.
 In these, georeferenced call interactions and colored cellphone antennas according to their level of vulnerable interactions, as defined previously.
 % We did this with the help of
 
@@ -93,7 +93,7 @@ At the national level, the results evidenced by the maps were coherent with the 
 
 
 
-In \cref{ch:machineLearning,ch:modelSelection} we gave a practical introduction to Machine Learning in general, and of Supervised Classification problems in specific. 
+In \cref{ch:machineLearning,ch:modelSelection} we gave a practical introduction to Machine Learning in general, and of Supervised Classification problems in specific.
 This helped us set our Chagas problem inside a systematic process to analyze long-term migrations with the CDR dataset.
 
 To do this, we broke the problem of long-term human migrations down to four tasks which were later analyzed through different classifiers.
@@ -102,18 +102,18 @@ These models were some of the most common techniques found in the literature for
 
 To start off we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
 Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the machine learning frame.
-This concept was introduced along with the notion of model hyperparameters. 
+This concept was introduced along with the notion of model hyperparameters.
 Both were relevant to subsequent sections and in particular to \cref{fig:log_loss_regularization_validation_curve}.
-There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varias across different regularization values. 
+There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varias across different regularization values.
 This affected both the training and test set performance in a similar way.
 
 
-At the same time we introduced other relevant concepts in the Machine Learning and we exemplified them from the our long-term prediction problem. 
+At the same time we introduced other relevant concepts in the Machine Learning and we exemplified them from the our long-term prediction problem.
 As is common in the literature, in \cref{figure:dtree_overfit_problem_2} we saw that increasing a decision tree's complexity leads to a clear case of overfitting the training data when trying to approximate the generalization error.
 
-The same procedure was used to illustrate the concept of ``Cross Validation'' in \cref{fig:cv_vs_test_score}. 
-We found that for \cref{target1} the test score was inside a one standard deviation band of the CV score, across a varying hyperparameter value for the Logistic Regression classifier. 
-These findings are consistent with lots of other experiments found in the literature. 
+The same procedure was used to illustrate the concept of ``Cross Validation'' in \cref{fig:cv_vs_test_score}.
+We found that for \cref{target1} the test score was inside a one standard deviation band of the CV score, across a varying hyperparameter value for the Logistic Regression classifier.
+These findings are consistent with lots of other experiments found in the literature.
 
 
 Towards the end of \cref{ch:modelSelection} we performed an extensive experimentation with both \cref{target1,target2}, using the same classifier.
@@ -123,20 +123,20 @@ As a minimum runtime, all of the cross-validated fits took greater than one and 
 In reality this value is a lower bound on the real optimization time for this algorithm, since we limited the number of iterations to at most one hundred steps.
 
 Another issue found with this algorithm was its extremely poor $F1$ performance for \cref{target2} with a test score lower than $0.01\%$.
-As we will see later in other statistical leaners, we had that 
+As we will see later in other statistical leaners, we had that
 the overall precision of the classifier was very poor due to not being able to accurately overestimating positive predictions.
-The algorithm was very inefficient in this aspect where the misclassification had a direct impact in the observed $F1$. 
+The algorithm was very inefficient in this aspect where the misclassification had a direct impact in the observed $F1$.
 
 
-Yet this low score was not seen in other metrics evaluated. 
-For \cref{target2} both the best $Recall$ and $Accuracy$ test and CV rates were all over $0.61\%$. 
+Yet this low score was not seen in other metrics evaluated.
+For \cref{target2} both the best $Recall$ and $Accuracy$ test and CV rates were all over $0.61\%$.
 The best-fit $C$ values were not consistent along all fits as the values differed in orders of magnitude.
 Solutions ranged from to $1E-3$ to $1E-1$ on different fits.
 With this we can still positively affirm that the best-fit models for this experiment were those which penalized the loss function with strong regularization terms.
 
 
-On the other hand, when using this classifier to solve \cref{target1}, we find that we can attain a $ROC AUC$ score of $0.76\%$. 
-And this score is achieved when cross validating solely on the $l1$ regularization parameter. 
+On the other hand, when using this classifier to solve \cref{target1}, we find that we can attain a $ROC AUC$ score of $0.76\%$.
+And this score is achieved when cross validating solely on the $l1$ regularization parameter.
 A similar test score of $0.744\%$ was reached when optimizing for the $l2$ hyperparameter of regularization.
 Each were optimized separately in order to exemplify how the overall $ROC AUC$ varied along different regularization thresholds.
 
@@ -148,7 +148,7 @@ A similar result can be found for regularization models and on procedures where 
 Both optimizations improved improved the models predictive power in varying degrees.
 
 
-The previous results outline a complete systematical Machine Learning approach and toolset used to evaluate the long-term migrations prediction problem. 
+The previous results outline a complete systematical Machine Learning approach and toolset used to evaluate the long-term migrations prediction problem.
 In this way we provide a methodical way to analyze classifiers perfroming on this problem.
 With this we tackled the task with the introduction of new algorithms in the following chapters.
 
@@ -157,22 +157,40 @@ With this we tackled the task with the introduction of new algorithms in the fol
 In\cref{ch:ensembleMethods} we introduce four new classifiers along with their properties and characteristics. Three of these, \cref{section:decision_trees,section:random_forests,section:gradient_boosting}, were tree based methods whilst the last, \cref{section:naive_bayes}, was a Naive Bayes Classifier used for benchmarking purposes.
 For each, we presented an introductory review and pointed the reader to further literature references where applicable.
 
-All were put through a number of experiments to evaluate how they performed across all prediction problems.
+All but the Decision Tree learners were put through a number of experiments to evaluate how they performed across all prediction problems.
 For each model, we tried to draw the greatest prediction performance from the features extracted from the dataset.
 
-Tree based models were evaluated in further detail however.
+Random Forest and Gradient Boosting models were evaluated in further detail however.
+And even though Decision Trees were not systematically analyzed, they were added as a departure point for the following ones.
+
+As a start, we showed through a validation curve that, in \cref{target2}, these learners could overfit if grown to trees of high depth.
+We had that the cross-validated scores and the test scores diverged rapidly after a tree-depth of $7$ and this is plotted in \cref{figure:dtree_overfit_problem_2}.
+The wide gap in the scores resulted in a difference larger than $0.3\%$.
+
+We also fit two Decision Tree instances for the same and problem and evaluated them on a $Accuracy$ score.
+The first fit was ran over a smaller hyperparameter configuration.
+In particular, this configuration did not
+idea was
+ and plotted their output in a graph.
+We showed for each node the attribute used in that splitting decision and the actual split value.
+Doing this provided some insights into what features were initially being used by the algorithm to separate samples, according to their split index performance.
+Still, given the low $Accuracy$ scores for both fits ($43.2\%$,and $57.9\%$)
+Interestingly enough, we found that
+
+
+
 All of these methods were successively compared on the same \cref{target2}, to compare and evaluate them on common ground.
 
-As we will see later in \cref{tab:all_results}, \cref{target2} happened to be the hardest task of all, where all classifiers had their lowest scores.
-
-By comparing this problem over the various tree methods, we presented a thorough discussion of the applications that these kind of datasets can provide.
+As we will see later in \cref{tab:master_table_results}, \cref{target2} happened to be the hardest task of all, where all classifiers had their lowest scores.
+% By comparing this problem over the various tree methods we discuss on applications that these kind of datasets can provide.
 % to these kinds of tasks was elaborated.
 
+To start of
 
 
- gave the lowest values for all classifiers. 
- 
-in successive 
+ gave the lowest values for all classifiers.
+
+in successive
 in their overfit
  in succe
 
@@ -183,7 +201,7 @@ in their overfit
 
 
 
-In all, we can say that for the prediction tasks, the feature selection heuristics of ensemble algorithms did agree upon a group of features. 
+In all, we can say that for the prediction tasks, the feature selection heuristics of ensemble algorithms did agree upon a group of features.
 These were highlighted over the rest for a number of times and they provide insight into what CDR information provided most
 predictive value.
 
@@ -200,8 +218,8 @@ From the results we collected, the best features can be broken down into the fol
     We make the reminder here that these measurments were the basis of our construction of the heatmaps in that same chapter.
     Where the antennas plotted concentrated users with vulnerable calls by calling volume or time, for a given month.
 
-    \item Mobility size: Finally, different measures of the distance in human mobility were determined to be important by the model. Both general mobility diameters and weekday or weeknight specific mobility endemic were relevant and on various occasions. 
-    We can informally add that Decision Tree Learners also selected this features in the higher nodes. 
+    \item Mobility size: Finally, different measures of the distance in human mobility were determined to be important by the model. Both general mobility diameters and weekday or weeknight specific mobility endemic were relevant and on various occasions.
+    We can informally add that Decision Tree Learners also selected this features in the higher nodes.
     This result can be seen in detail at \cref{subsection:decision_trees_experiment}.
 
 \end{itemize}
@@ -213,13 +231,13 @@ A more thorough examination of these results can be seen in \cref{tab:random_for
 
 
 
-From our findings, we can say that there is no absolute single method that can be single-handedly applied to all problems and evaluation performances. 
+From our findings, we can say that there is no absolute single method that can be single-handedly applied to all problems and evaluation performances.
 However, our results outline that the Gradient Boosting methods were, in general, top performing for all tasks and classifiation metrics, except for the $F1$ score.
 
-Surprisingly enough, for some problems the Naive Bayes was outperforming in this $F1$ metric. 
+Surprisingly enough, for some problems the Naive Bayes was outperforming in this $F1$ metric.
 The algorithm was more conservative in its positive predictions and this difference saw a tradeoff in its performance across other metrics.
 
-However we can say that results show that the performance of Gradient Boosting models is best over other models such as Logistic Regression or Naive Bayes algorithms for most tasks, and slightly better over the Random Forests. 
+However we can say that results show that the performance of Gradient Boosting models is best over other models such as Logistic Regression or Naive Bayes algorithms for most tasks, and slightly better over the Random Forests.
 These models can find complex interactions in the data whilst handling enough care not to lose generalization power.
 
 
@@ -255,7 +273,7 @@ This work intends to help authorities with disease-control strategies in way whi
 Measures can then be applied outside of the endemic region, and directed towards specific neighbourhoods and communities by using the recommendations output by the risk algorithm.
 
 
-\cref{tab:all_results} shows a compendium of the results obtained from the CDR dataset, using all classification models.
+\cref{tab:master_table_results} shows a compendium of the results obtained from the CDR dataset, using all classification models.
 For ech problem and model, we found the best performing learner with a cross validation procedure which searched over an extensive grid of hyperparameters.
 In all cases, the hyperparameter configuration with highest cross-validated $ROC AUC$ was selected as the \textit{best-fit}.
 %Due to time constraints limited by the use of full cross validation fitting procedures, not all models were run for all of the tasks.
@@ -264,7 +282,7 @@ The following table shows the best-fit classifier's performance across three sco
 \begin{table}
 \caption{Master resutls table comparing results for all of the classifiers run in this work.
 For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
-\label{tab:all_results}
+\label{tab:master_table_results}
 \centering
     \begin{tabular*}{0.9\textwidth}{@{\extracolsep{\fill} }  l l l l l }
     %{|p{2cm}|p{2cm}|p{1.5cm}|p{1cm}|p{1.5cm}}
@@ -311,8 +329,7 @@ For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test
 
 
 
-
-\section{Conclusions}\label{section:conclusions}
+\chapter{Conclusions}\label{ch:conclusions}
 
 
 The analysis exposed allowed us to show that the Risk maps we developed are of interest to national health campaigns.
@@ -396,7 +413,7 @@ They also point to the idea that CDRs are particularly well suited for this task
 These tests effectively helped understand how relevant the dataset is to the question, where the complexity and scale of the data can be, up to a certain degree, assimilated by probabilistic algorithms.
 % , using the models outlined before.
 
-Large at-scale and temporal user mobility were captured by the CDRs, allowing us to understand a variety of human movements thoughout the country. 
+Large at-scale and temporal user mobility were captured by the CDRs, allowing us to understand a variety of human movements thoughout the country.
 
 
 % \section{In-depth discussion}
@@ -410,15 +427,15 @@ Migration patterns can then be used to suggest actual epidemic spread of this di
 \section{Drawbacks from our methodology}
 
 There are several points can be stated to point to weak spots on the methodology used.
-An important observation is that we can not directly jump from the human mobility insights found in this study, to conclusions from a model of disease spread. 
+An important observation is that we can not directly jump from the human mobility insights found in this study, to conclusions from a model of disease spread.
 From this work, we were looking solely at human mobility to and from endemic regions, which does not imply disease spread or prevalence.
 However, on the advice of this topic's researchers, this work does bring valuable insights to the problem, reinforcing previous hypothesis that vulnerable users are not only to be found inside vector-infested regions.
 
 
 Another issue with this work is the inherent biases in our dataset.
 As shown in \cref{tab:distribution_by_state}, there are significant differences in the percentage of population represented by our dataset vs.\ current state distribution estimates.
-Due to this, we have to interpret results with caution, since we do not hold any real-data comparisons. 
-For this work we did not find any available georeferrenced disease data outside of the endemic region, at municipal or regional levels.\footnote{As a matter of fact, we tried to contact health institutions and research organizations working on the matter with the purpose of enriching the original dataset. 
+Due to this, we have to interpret results with caution, since we do not hold any real-data comparisons.
+For this work we did not find any available georeferrenced disease data outside of the endemic region, at municipal or regional levels.\footnote{As a matter of fact, we tried to contact health institutions and research organizations working on the matter with the purpose of enriching the original dataset.
 This intent did not add any disease-related data of the kind.}
 
 Other interesting biases stemming from the data are related to international pattern migrations.
@@ -432,7 +449,7 @@ Our dataset also presents problems when processing a user's home antenna.
 To do this we had to define what we though were the expected ``working hours'' for all users.
 In doing so, we also assumed that this coulb be generalized to all samples. %used in a generalized case.
 Even though this decision was supported from past research we refereneced, the definitons might not be easily translated for datasets across other geographical and cultural regions.
-% This was done by considering what we thought 
+% This was done by considering what we thought
 
 
 Finally, we know that we can have significant time seasonality and stationarity in the data, yet we did not consider statistical methods to reduce this effect in a thorough fashion. % but only in a limited fashion.
@@ -449,7 +466,7 @@ Yet these were out of the scope of this work, due to the lack of ground truth in
 
 
 
-\subsection{ Lines of Future Work }
+\section{ Lines of Future Work }
 
 \todo{Add try other ML methods such as SVM or neural nets to improve on the general F1 score or compete against Naive Bayes high F1 score.}
 
@@ -489,13 +506,13 @@ For the purpose of continuing this reserach line, the following is a list of pos
 
 
 
-%   ___  _     ___         ___________ __ __ _____ _____ 
+%   ___  _     ___         ___________ __ __ _____ _____
 %  /   \| |   |   \       / ___/      |  |  |     |     |
 % |     | |   |    \     (   \_|      |  |  |   __|   __|
-% |  O  | |___|  D  |     \__  |_|  |_|  |  |  |_ |  |_  
-% |     |     |     |     /  \ | |  | |  :  |   _]|   _] 
-% |     |     |     |     \    | |  | |     |  |  |  |   
-%  \___/|_____|_____|      \___| |__|  \__,_|__|  |__|   
+% |  O  | |___|  D  |     \__  |_|  |_|  |  |  |_ |  |_
+% |     |     |     |     /  \ | |  | |  :  |   _]|   _]
+% |     |     |     |     \    | |  | |     |  |  |  |
+%  \___/|_____|_____|      \___| |__|  \__,_|__|  |__|
 
 % % With a running time of 80s, 10 steps are generally needed to achieve a 0.977 validation accuracy score on
 % The best model was a Logistic Regression Classifier with an $L2$-penalty value of 0.01.
