--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -351,140 +351,55 @@ At the same time, the relative difference of the best CV and training scores, fo
 This percentage difference signals that the max depth hyperparameter is significantly more sensible to over-fitting than the number of trees parameter.
 
 
-\subsection{Predictive error bounds}
+\subsection{Predictive error bounds}\label{subsec:rforest_predictive_error_bounds}
 
 Random Forests are built upon a bag of weaker classifier, of which each individual estimator has a different prediction error.
 To build an estimate of the generalization error on the ensemble classifier, these individual scores and the relationship between them must be measured.
 In this sense, the \textit{strength} and \textit{correlation}of a Random Forest must be analyzed to arrive on an estimate of the generalization error.
 
-%\begin{lemma}
-%Given two line segments whose lengths are $a$ and $b$ respectively there is a
-%real number $r$ such that $b=ra$.
-%\end{lemma}
 
-\begin{theorem}
-There exists an upper bound for the generalization error.
-\end{theorem}
+Define $$\hat{\jmath}( \textbf{x},\textbf{y}) = \argmax_{j \neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$$ and let the margin function for a random forest (not a group of classifiers) be defined as
 
+\[\label{eq:rf-marginFunRf}
+mr(\textbf{x},\textbf{y}) = P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{\jmath})
+\\
+= \Expect_{\Theta} \left[ I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{\jmath} ) \right]
+\]
 
-\begin{proof}
-	Define $\hat{\jmath}( \textbf{x},\textbf{y})$ as $\argmax_{j \neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$ and let the margin function for a random forest (not a group of classifiers) be defined as
+This characterizes the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}.
+Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the ensemble classifier can correctly classify or not the sample's label, given $\Theta$.
 
-	\[\label{eq:rf-marginFunRf}
-	mr(\textbf{x},\textbf{y}) = P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{\jmath})
-	\\
-	= \Expect_{\Theta} \left[ I(h(\textbf{x},\Theta ) = y ) - I( h( \textbf{x},\Theta ) = \hat{\jmath} ) \right]
-	\]
+Let the strength of the set of weak classifiers in the forest be defined as
 
-
-	%\[%\]
-
-	%\]
-
-	Here the margin function is described as the expectation taken over another function which is called the \textbf{raw margin function}\label{eq:rf-rawMarginFun}.
-    Intuitively, the raw margin function takes each sample to be $1$ or $-1$ according to whether the ensemble classifier can correctly classify or not the sample's label, given $\Theta$.
-
-	With these definitions, it is straight to see that
-
-        	%\[%\]
-            \begin{equation}
-            {mr( \textbf{x},\textbf{y} )}^2 = \Expect_{\Theta, \Theta'} \left[ rmg( \Theta,\textbf{x},\textbf{y} ) \ rmg(\Theta',\textbf{x},\textbf{y} ) \right]
-            \end{equation}
-
-
-	This in turn implies that
-            \begin{equation}\label{eq:rf-marginFunVar}
-	            \begin{split}
-	            var(mr) & = \Expect_{\Theta, \Theta'}
-	            \left[
-	            cov_{\textbf{x},\textbf{y}}
-	            (rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} ))
-	            \right] \\
-	            & = \Expect_{\Theta, \Theta'}
-	            \left[
-	            \rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
-	            \right]
-	            \end{split}
-            \end{equation}
-
-	where $ \rho(\Theta, \Theta')$ is the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$, and $\sigma(\Theta)$ is the standard deviation of $rmg(\Theta,\textbf{x},\textbf{y})$.
-    In both cases, $\Theta$ and $\Theta'$ are given.% to be fixed.
-
-	Equation \cref{eq:rf-marginFunVar} in turn implies that
-
-	\begin{equation}\label{eq:rf-varianceBound}
-            \begin{split}
-            var(mr) & = \overline{\rho} {(\Expect_{\Theta}\left[ \sigma(\Theta)\right] )}^2 \\
-            & \leq \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right]
-            \end{split}
-            \end{equation}
-
-	where we have conveniently defined $\overline{\rho}$ as
-
-	\begin{equation}\label{eq:rf-meanCorrelation}
-            \frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
-            {\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
-            \end{equation}
-
-	Note that this is the mean value of the correlation.
-
-	Let the strength of the set of weak classifiers in the forest be defined as
-
-            \begin{equation}\label{eq:rf-strength}
-            s = \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right]
-            \end{equation}
-
-	Assuming that $s \geq 0$ we have that the prediction error is bounded by
-            \begin{equation}\label{eq:rf-predictiveErrorBound1}
-            PE^* \leq var(mr)/s^2
-            \end{equation}
-	by Chebyshev's inequality.
-	On the other we also have that
-
-            \begin{equation}\label{eq:rf-expectedVarBound}
-            \begin{split}
-            \Expect_{\Theta} \left[ var(\Theta) \right] & \leq \Expect_{\Theta} {\left[ \Expect_{\textbf{x},\textbf{y}}\left[ rmg(\Theta,\textbf{x},\textbf{y})  \right] \right]}^2 -s^2 \\
-            & \leq 1-s^2
-            \end{split}
-            \end{equation}
-
-
-
-	We can use \cref{eq:rf-varianceBound}, \cref{eq:rf-predictiveErrorBound1} and \cref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
-
-            \begin{equation}\label{eq:rf-PEBound}
-            PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
-            \end{equation}
-
-\end{proof}
-
-
-This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them.
-The author of the algorithm~\cite{breiman-randomforests} remarks here that this bound may not be strong.
-He also puts special importance on the ratio between the correlation and the strength $\frac{\overline{\rho}}{s^2}$ where this should be as small as possible to build a strong classifier.
-
-
-\subsection{Binary Class}\label{subsection:random_forests_binary_class}
-
-In the context of a binary class problem, where the target variable can only take two values, there are simplifications to the formula \cref{eq:rf-PEBound}.
-In this case, the margin function takes the form of $2 P_{\Theta}(h(\textbf{x}) = \textbf{y}) -1$ and similarly the raw margin function results in $2 I(h(\textbf{x}, \Theta) = \textbf{y}) -1$.
-
-
-The bounds prediction error bounds derived in \cref{eq:rf-predictiveErrorBound1} assume that $s >0$ which in this case results in
-\begin{equation}
-\Expect_{\textbf{x},\textbf{y}} \left[ P_{\Theta}(h(\textbf{x}) = \textbf{y}) \right] > \frac{1}{2}
+\begin{equation}\label{eq:rf-strength}
+s = \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right]
 \end{equation}
 
+Define $ \rho(\Theta, \Theta')$ as the correlation between $rmg(\Theta,\textbf{x},\textbf{y})$ and $rmg(\Theta',\textbf{x},\textbf{y})$ of two weak learners, then we can have the mean value correlation for the ensemble as 
 
-Also, the correlation between $I(h(\textbf{x}, \Theta) = \textbf{y})$ and \ $I(h(\textbf{x}, \Theta') = \textbf{y})$, denoted $\overline{\rho}$ will take the form
+%	where we have conveniently defined as
+%Note that this is the mean value of the correlation.
+\begin{equation}\label{eq:rf-meanCorrelation}
+\overline{\rho} = \frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
+{\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
+\end{equation}
 
-\begin{equation}
- \overline{\rho} = \Expect_{\Theta,\Theta'} \left[ \rho \left( h(\cdot{},\Theta) ,h(\cdot{},\Theta') \right)  \right]
- \end{equation}
+With these definitions we can then see that,
 
+\begin{theorem}
+There exists an upper bound for the generalization error of a Random Forest which is    \begin{equation}\label{eq:rf-PEBound}
+PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
+\end{equation}
+\end{theorem}
 
+The proof of this can be found in \cref{appx:sec:rforest_predictive_error_bounds}.\\
 
-%
+This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them.
+
+This proof can also be found in~\cite{breiman-randomforests} and in that work it is said that the bound may not be tight enough for practical significance.
+Special importance is also put on the ratio between the correlation and the strength ($\frac{\overline{\rho}}{s^2}$) of the base learners where, to build a strong classifier, this should be as small as possible.
+For this reason decision trees make a canonical choice for weak learners, being low biased models which are prone to overfitting.
+These ensembles are a first choice when building a first, cost-effective, model to deliver a prediction task with acceptable to excellent performance.
 
 
 \subsection{Other Notes on Random Forests}\label{subsection:random_forests_other_notes}
