--- a/appendix.tex
+++ b/appendix.tex
@@ -419,7 +419,7 @@ With these definitions we can then see that,
 	
 	We can use \cref{eq:rf-varianceBound}, \cref{eq:rf-predictiveErrorBound1} and \cref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
 	
-	\begin{equation}\label{eq:rf-PEBound}
+	\begin{equation}
 	PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
 	\end{equation}
 	
