split chapter labels to results or conclusions

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -210,7 +210,7 @@ Thus, appropriate care must be taken for each case on which attributes are avail
 
 
 With \cref{target1,target2,target3,target4}, we continue onto define and illustrate techniques for supervised classification.
-Throughout \cref{ch:modelSelection,ch:ensembleMethods,ch:results_conclusion} we will come back to these problems by applying them with the techniques and methods we discuss.
+Throughout \cref{ch:modelSelection,ch:ensembleMethods,ch:results,ch:conclusion} we will come back to these problems by applying them with the techniques and methods we discuss.
 
 
 \section{A working example of a Machine Learning setup}\label{section-example}
