split results conclusions chapters

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,8 @@
   \include{ch_machine_learning}
   \include{ch_model_selection}
   \include{ch_ensemble_methods}
-  \include{ch_results_conclusions}  
+  \include{ch_results} 
+  \include{ch_conclusions} 
 
 \backmatter
 	\printbibheading[heading=bibbook]
